all changes to booking page is added

--- a/ClientSide/src/Components/Style/cards.css
+++ b/ClientSide/src/Components/Style/cards.css
@@ -1,4 +1,52 @@
 .card{
  width: 15rem ;
-
+box-shadow: 3px 3px #c0baba;
+height: 20rem;
+}
+#carCard{
+    display: flex;
+    width:90%;
+    flex-wrap: wrap;
+    margin-left: 150px;
+    justify-content: space-between;
+    gap:15px;
+}
+#cardBody{
+    display: flex;
+    flex-wrap: wrap;
+   height: 150px;
+   width: 15rem;
+  
+}
+#milage{
+    color: rgb(77, 219, 77);
+    
+}
+#person{
+    color: rgb(157, 144, 144);
+    font-weight: 500;
+    margin-left:0;
+}
+#name-container{
+    
+   display: flex;
+   flex-direction: column;
+   height:max-content;
+}
+#name{
+    
+}
+#seater{
+    width:15rem;
+    height: 30px;
+}
+#booking{
+    width:15rem;
+    height: 30px;
+    border: 1px solid rgb(149, 145, 145);
+    position: relative;
+    bottom: 5px;
+    background-color: rgb(168, 168, 222);
+    color: aliceblue;
+    border-radius: 5px;
 }
