--- a/ClientSide/src/Components/Style/header.css
+++ b/ClientSide/src/Components/Style/header.css
@@ -1,7 +1,7 @@
 #header{
     width:100%;
     height: 50px;
-    background-color:rgb(225, 220, 220);
+    background-color:rgba(58, 82, 217, 0.752);
 }
 #form{
     display:flex;
@@ -16,8 +16,9 @@
 
 }
 #modify{
-    background-color: rgb(96, 96, 241);
-    border-radius: 15px;
+    background-color: rgba(72, 72, 162, 0.779);
+    border-radius: 20px;
+    width:20rem;
 }
 .arrow{
     padding-top: 5px;
