Backend add car details are added

--- a/ClientSide/src/Components/Style/AddCarDetail.css
+++ b/ClientSide/src/Components/Style/AddCarDetail.css
@@ -61,8 +61,7 @@ input{
     color: blue;
 }
 #image-add-in-add-user-form{
-    display: flex;  
-    justify-content: space-between;
+  padding-bottom: 20px;
 }
 #right-side-form{
     width: 40%;
