--- a/ClientSide/src/Components/Style/Navig.css
+++ b/ClientSide/src/Components/Style/Navig.css
@@ -1,18 +1,22 @@
-.Logo{
-    width: 50px;
-    height: 50px;
+.Logo {
+    width: 120px;
+    margin-left: 50px;
+    margin-top: 10px;
 }
 
 .navbar{
-    position: fixed;
-    width: 100vw;
-    height: 8vh;
-    background-color: black;
-    box-shadow: #fff 2px 2px 0 0, #000 2px 2px 0 1px;
-    transform: translate(2px, 2px);
+    margin-top: 55px;
 }
 
-.navholder{
-    background-color: blue;
-    color: aliceblue;
+.glass{
+    position: fixed;
+    height: 8vh;
+    width: 98vw;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border:1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+    transform: translate(2px, 2px);
+    border-radius: 2px;
 }
