--- a/ClientSide/src/Components/Style/AddCarDetail.css
+++ b/ClientSide/src/Components/Style/AddCarDetail.css
@@ -49,6 +49,7 @@ input{
     margin-left: 12%;
     margin-top: 70px;
     padding-bottom: 20px;
+    color: aliceblue;
 }
 #btn-cancle-add-detail{
     height: 45px;
@@ -118,12 +119,12 @@ input{
 #form-add-car-details{
     margin-left: 60px;
     width: 90%;
-    box-shadow: 3px 3px 10px black;
+    box-shadow: 3px 3px 10px rgb(250, 249, 249);
     padding-top: 40px;
     padding-bottom: 30px;
     border-radius: 35px;
     background-color: rgb(5, 5, 60);
-    background-image: linear-gradient(rgb(3, 3, 37),rgb(58, 58, 146));
+    background-image: linear-gradient(rgb(17, 17, 18),rgb(58, 58, 146));
     color: aliceblue;
     
 }
@@ -148,6 +149,7 @@ input{
     margin-left: 8%;
     margin-top: 70px;
     padding-bottom: 20px;
+    color: aliceblue;
    
 }
 input:focus, textarea:focus{
