--- a/ClientSide/src/Components/Style/AdminPage.css
+++ b/ClientSide/src/Components/Style/AdminPage.css
@@ -43,10 +43,10 @@ hr{
     font-size: small;
     /* margin-left: px; */
 }
-#milage{
+#milage-of-my-admin-page-details{
     color: rgb(77, 219, 77);
 }
-#person{
+#person-of-admin-page-in-my-page{
     color: rgb(157, 144, 144);
     font-weight: 500;
 }
