--- a/ClientSide/src/Components/Style/Home.css
+++ b/ClientSide/src/Components/Style/Home.css
@@ -1,6 +1,6 @@
 .Home-page{
     width: 100vw;
-    height: 100vh;
+    height: auto;
     background-image: url(https://images.pexels.com/photos/919073/pexels-photo-919073.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
     background-repeat: no-repeat;
     background-size: 100vw 100vh;
