--- a/ClientSide/src/Components/Style/header.css
+++ b/ClientSide/src/Components/Style/header.css
@@ -1,26 +1,49 @@
 #header{
     width:100%;
     height: 50px;
-    background-color:rgba(15, 26, 72, 0.9);
+    background-color:rgba(212, 215, 229, 0.9);
 }
 #form{
     display:flex;
-   
+   gap:7px;
 }
 .Origin{
     margin-top:10px;
     align-items: center;
-    border:1px solid rgb(182, 173, 173);
+    border:1px solid rgb(21, 18, 18);
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bolder;
+    color: rgba(94, 94, 202, 0.981);
+}
+li{
     
+    width:200px;
+    list-style-type: none;
 }
 #modify{
     background-color: rgba(94, 94, 202, 0.981);
     border-radius: 20px;
-    width:20rem;
-    margin-left: 15px;
-    height: fit-content;
+    width:8rem;
+    text-align: center;
+    height: 30px;
     color: aliceblue;
+    position: relative;
+    top:10px;
+    margin-left: 10px;
+   
+}
+#savebtn{
+    background-color: rgba(94, 94, 202, 0.981);
+    border-radius: 20px;
+    width:8rem;
+    text-align: center;
+    height: 30px;
+    color: aliceblue;
+    margin-left: 10px;
 }
 .arrow{
     padding-top: 5px;
+    border: solid rgb(238, 235, 235);
+    margin-top: 5px;
 }
