--- a/ClientSide/src/Components/Style/Payment.css
+++ b/ClientSide/src/Components/Style/Payment.css
@@ -4,7 +4,9 @@
  padding: 50px;
  position: relative;
  border: 1px solid; 
- margin-top: 100px;  
+ margin-top: 100px; 
+ color: black;
+ 
 }
 
 .containers{
@@ -14,6 +16,7 @@
  display: flex;
  border: 1px solid;
  justify-content: space-between;
+ color: black;
 }
 
 .cardetail{
@@ -22,6 +25,7 @@
     /* height: 50%; */
     display: grid;
     grid-template-row: 1fr 1fr 1fr;
+    color: black;
 }
 
 .upper{
@@ -44,6 +48,7 @@
     justify-content: space-between;
     border-bottom: 1px solid;
     padding: 15px;
+    color: black;
 }
 
 .bookingId{
@@ -60,4 +65,5 @@
     border: 1px solid;
     width: 30%;
     padding: 30px;
+    color: black;
 }
