--- a/ClientSide/src/Components/Style/filter.css
+++ b/ClientSide/src/Components/Style/filter.css
@@ -1,4 +1,4 @@
-.select{
+/* .select{
  height:30px;
  width:120px;
  border-radius: 5px;
@@ -21,4 +21,41 @@ border: 1px solid #4279cd;
 #button{
   padding-left: 75px;
   box-sizing: boder-box;
+} */
+#select-butn-fileter-container-indiv{
+  display: flex;
+  gap: 20px;
+margin-bottom: 20px;
+}
+
+#car-type-filter-in-booking-page{
+background-color: white;
+
+height: auto;
+padding: 3px;
+margin-left: 20px;
+box-shadow: 3px 3px 10px black;
+width: 130px;
+margin-top: 5px;
+margin-bottom: 10px;
+
+}
+.checkbox-in-filter-in-cartype{
+  width: 20px;
+  height:15px;
+}
+#button-of-the-filete-the-data-in-bookin-page{
+  margin-top: 8px;
+  border-radius: 5px;
+  margin-left:20px ;
+background-color: rgb(237, 244, 249);
+font-size: large;
+font-weight: bold;
+color: rgb(5, 134, 247);
+border: 2px solid blue;
+}
+#button-of-the-filete-the-data-in-bookin-page:focus{
+  color: rgb(253, 254, 254);
+
+  background-color: rgb(5, 134, 247);
 }
