--- a/ClientSide/src/Components/Style/header.css
+++ b/ClientSide/src/Components/Style/header.css
@@ -1,7 +1,9 @@
 #header{
     width:100%;
     height: 50px;
-    background-color:rgba(212, 215, 229, 0.9);
+    background-color:rgb(255, 255, 255);
+    border: 1px solid rgb(114, 108, 108);
+   
 }
 #form{
     display:flex;
@@ -10,11 +12,14 @@
 .Origin{
     margin-top:10px;
     align-items: center;
-    border:1px solid rgb(21, 18, 18);
+    border:1px solid rgb(155, 150, 150);
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bolder;
     color: rgba(94, 94, 202, 0.981);
+    height:max-content;
+    width:max-content;  
+    box-shadow: 1px 1px;                
 }
 li{
     
