--- a/ClientSide/src/Components/Style/AddCarDetail.css
+++ b/ClientSide/src/Components/Style/AddCarDetail.css
@@ -156,6 +156,7 @@ input{
 input:focus, textarea:focus{
     border-color: blue;
     box-shadow: 3px 3px 10px blue;
+    outline: rgb(87, 87, 219);
 }
 label{
     font-size: large;
