--- a/ClientSide/src/Components/Style/login.css
+++ b/ClientSide/src/Components/Style/login.css
@@ -8,6 +8,8 @@
     margin-left: 170px;
     margin-top: -120px;
     border-radius: 20px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .login-admin-the-css-for-form{
