--- a/ClientSide/src/Components/Style/Payment.css
+++ b/ClientSide/src/Components/Style/Payment.css
@@ -1,69 +1,133 @@
-.box{
+.box-of-payment{
  width: 100vw;
  height: 100vh;
- padding: 50px;
- position: relative;
- border: 1px solid; 
- margin-top: 100px; 
+ padding-top: 30px; 
  color: black;
- 
+ position: relative;
 }
 
-.containers{
+.contanermaginc-lum{
+ position: absolute;
  width: 100%;
  height: 90%;
- position: absolute;
  display: flex;
- border: 1px solid;
  justify-content: space-between;
  color: black;
+ padding: 50px;
 }
 
-.cardetail{
+.cardetail-app{
     border: 1px solid;
     width: 68%;
-    /* height: 50%; */
+    height: 100%;
     display: grid;
     grid-template-row: 1fr 1fr 1fr;
     color: black;
+    border-radius: 15px;
 }
 
 .upper{
    border-bottom: 1px solid;
    padding: 15px;
+   height: 100%;
 }
 
 .comp{
-    display: flex;
-    justify-content: space-between;
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    height: 100%;
+    /* background-color: red; */
 }
 
-#img{
-    width: 20vw;
+.image-of-car{
+    width: 17vw;
     height: 15vh;
 }
 
+.img{
+    width: 100%;
+    height: 100%;
+}
+
 .midddle{
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     border-bottom: 1px solid;
     padding: 15px;
     color: black;
+    height: 100%;
 }
 
-.bookingId{
-    border-bottom: 1px solid;
+.image-of-hte-map{
+    width: 17vw;
+    height: 15vh;
 }
 
-.cancel{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.map-of-doom{
+    width: 17vw;
+    height: 15vh;
+}
+
+.lower{
+    height: 100%;
+    padding: 15px;
+}
+
+.boomking-cont-dgg{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+
+.cancel-button-of-page{
+ margin-top: 30px;
+    
+}
+
+.cncl-brfd{
+    width: 10vw;
+    height: 5vh;
+    
 }
 
 .payment{
     border: 1px solid;
     width: 30%;
+    height: 100%;
     padding: 30px;
     color: black;
+    border-radius: 15px;
+}
+
+.order-details{
+    display: grid;
+    grid-template-columns: 5fr 5fr;
+    height: 50%;
+    padding-bottom: 30px;
+    border-bottom: 1px solid;
+    padding-top: 30px;
+}
+
+.parameter{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 30px;
+}
+
+.data-gogog{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 30px;
+    margin-left: 100px;
+}
+
+.paylower{
+    padding-top: 40px;
+}
+
+.payment-button{
+    width: 24vw;
 }
