--- a/ClientSide/src/Components/Style/cards.css
+++ b/ClientSide/src/Components/Style/cards.css
@@ -83,6 +83,7 @@
        color: aliceblue;
    }
    #book{
-       color: rgb(224, 230, 235);
+    margin-top: -25px;
+       color: rgb(224, 231, 237);
    }
    
