add booking details and booking page

--- a/ClientSide/src/Components/Style/Home.css
+++ b/ClientSide/src/Components/Style/Home.css
@@ -1,6 +1,6 @@
 .Home-page{
     width: 100vw;
-    height: auto;
+    height: 100vh;
     background-image: url("../images/background.png");
     background-repeat: no-repeat;
     background-size: 100vw 100vh;
