--- a/ClientSide/src/Components/Style/page3.css
+++ b/ClientSide/src/Components/Style/page3.css
@@ -1,9 +1,9 @@
 #container{
-width:450px;
+width:550px;
 height:400px;
 border:1px solid rgb(170, 172, 176); 
 position: relative;
-top:200px;
+top:100px;
 left:90px;
 display: flex;
 flex-wrap: wrap;
@@ -22,18 +22,36 @@ border-radius: 10px;
 border-radius:10px ;
 position: relative;
 height:40px;
-left:15px;
+left:35px;
 border:1px rgb(169, 156, 156);
 background-color:white;
 color: black;
 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 top:10px;
-
+width:450px;
 
 }
 #modifybtn{
     top:60px;
     background-color: rgb(78, 71, 145);
-    left:330px;
+    left:-50px;
     color: white;
+    width:90px;
+}
+#quote{
+  margin-left: 2px;
+  margin-top: 1px;
+  height:1px;
+  font-family:Georgia, 'Times New Roman', Times, serif;
+  font-weight: 550;
+ width: fit-content;
+
+}
+#welcome{
+  color:rgb(52, 62, 198);
+  margin: 0px;
+  text-align: center;
+ padding-top: 50px;
+ box-sizing: border-box;
+
 }
