--- a/ClientSide/src/Components/Style/cards.css
+++ b/ClientSide/src/Components/Style/cards.css
@@ -7,10 +7,13 @@
        display: flex;
        width:90%;
        flex-wrap: wrap;
-       margin-left: 70px;
+       width:100%;
        justify-content: space-between;
        gap:30px;
+       background-image: url('../images/background.png');
    }
+   
+
    #cardBodys{
        display: flex;
        flex-wrap: wrap;
