--- a/ClientSide/src/Components/Style/filter.css
+++ b/ClientSide/src/Components/Style/filter.css
@@ -25,11 +25,13 @@ border: 1px solid #4279cd;
 #select-butn-fileter-container-indiv{
   display: flex;
   gap: 20px;
-margin-bottom: 20px;
+margin-bottom: 10px;
+background-color:  rgb(214, 219, 225);
+padding-left: 45px;
 }
 
 #car-type-filter-in-booking-page{
-background-color: white;
+background-color: rgb(236, 229, 229);
 
 height: auto;
 padding: 3px;
@@ -46,13 +48,14 @@ margin-bottom: 10px;
 }
 #button-of-the-filete-the-data-in-bookin-page{
   margin-top: 8px;
-  border-radius: 5px;
+  border-radius: 10px;
+  height: fit-content;
   margin-left:20px ;
-background-color: rgb(237, 244, 249);
+background-color: rgb(205, 216, 224);
 font-size: large;
-font-weight: bold;
-color: rgb(114, 111, 194);
-border: 2px solid rgb(93, 93, 162);
+font-weight:500;
+color: rgb(47, 42, 42);
+border: 2px solid rgb(47, 111, 184);
 }
 #button-of-the-filete-the-data-in-bookin-page:focus{
   color: rgb(253, 254, 254);
