--- a/ClientSide/src/Components/Style/header.css
+++ b/ClientSide/src/Components/Style/header.css
@@ -1,13 +1,14 @@
 #header{
     width:100%;
     height: 50px;
-    background-color:rgb(255, 255, 255);
-    border: 1px solid rgb(114, 108, 108);
-   
+    background-color: rgb(214, 219, 225);
+    border: 1px solid rgb(188, 181, 181);
+   margin-top: 5px;
 }
 #form{
     display:flex;
    gap:7px;
+   
 }
 .Origin{
     margin-top:10px;
@@ -16,9 +17,8 @@
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bolder;
-    color: rgba(94, 94, 202, 0.981);
     height:max-content;
-    width:max-content;  
+    width:500px;  
     box-shadow: 1px 1px;                
 }
 li{
