--- a/ClientSide/src/Components/Style/Payment.css
+++ b/ClientSide/src/Components/Style/Payment.css
@@ -1,9 +1,10 @@
 .box-of-payment{
- width: 100vw;
+ width: 100%;
  height: 100vh;
  padding-top: 30px; 
  color: black;
  position: relative;
+ background-color:rgb(211, 223, 233) ; 
 }
 
 .contanermaginc-lum{
@@ -12,7 +13,7 @@
  height: 90%;
  display: flex;
  justify-content: space-between;
- color: black;
+ color:black;
  padding: 50px;
 }
 
@@ -21,8 +22,8 @@
     width: 68%;
     height: 100%;
     display: grid;
-    grid-template-row: 1fr 1fr 1fr;
-    color: black;
+   
+    color: rgb(16, 12, 12);
     border-radius: 15px;
 }
 
