new files add and updated

--- a/ClientSide/src/Components/Style/login.css
+++ b/ClientSide/src/Components/Style/login.css
@@ -1,20 +1,21 @@
 .container-of-login-form-in-my-side{
     width: 60%;
     height: auto;
-    padding: 30px;
+    padding:30px;
     background-color: aliceblue;
     box-shadow: 3px 3px 10px black;
     display: block;
     margin-left: 170px;
     margin-top: -120px;
     border-radius: 20px;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 .login-admin-the-css-for-form{
     margin-bottom: 5px;
     width: 100%;
+    padding: 10px;
 }
 #button-container-in-admin-login-page{
     text-align: center;
@@ -25,6 +26,7 @@
     font-size: large;
     font-weight: bold;
     border-radius: 12px;
+    margin-top: 30px;
 }
 #button-container-in-admin-login-page-btn-admin-login{
     background-color: green;
@@ -32,4 +34,5 @@
     font-size: large;
     font-weight: bold;
     border-radius: 12px;
+    margin-top: 30px;
 }
