--- a/ClientSide/src/Components/Style/AdminPage.css
+++ b/ClientSide/src/Components/Style/AdminPage.css
@@ -61,7 +61,7 @@ hr{
     border-color:green;
   
 }
-#welcome{
+#welcome-to-admin-page{
     margin-left: 120px;
     margin-top: 70px;
     color: rgb(68, 76, 237);
