--- a/ClientSide/src/Components/Style/editFormpaymentdetails.css
+++ b/ClientSide/src/Components/Style/editFormpaymentdetails.css
@@ -5,7 +5,7 @@
   
 }
 .edit-form-payment-details{
-    width: 60%;
+    width: 40%;
     margin-left: 40px;
   
 }
@@ -89,4 +89,23 @@ input[type="checkbox"]{
     position: absolute;
     right: 0px;
     top:0px;
+}
+#for-maip-i-created-container{
+    position: relative;
+}
+.image-of-hte-map-of-the-edit-page{
+    position: absolute;
+    width: 200px;
+    top: 12px;
+    right: 0;
+}
+#origin-of-the-edit-page{
+    margin-left: 75px;
+}
+label{
+    font-size: large;
+    font-weight: bold;
+}
+span{
+    font-weight: bold;
 }
