--- a/ClientSide/src/Components/Style/Payment.css
+++ b/ClientSide/src/Components/Style/Payment.css
@@ -16,16 +16,18 @@
  color:black;
  padding: 50px;
  border-radius: 5px;
+ border-radius: 30px;
 }
 
 .cardetail-app{
-    border: 1px solid;
+  
     width: 68%;
     height: 100%;
     display: grid;
    
     color: rgb(16, 12, 12);
-    border-radius: 5px;
+    border-radius: 30px;
+    box-shadow: 3px 3px 10px black;
     
 }
 
@@ -34,8 +36,9 @@
    padding: 15px;
    height: 100%;
    background-color: rgb(5, 5, 60);
-   background-image: linear-gradient(rgb(17, 17, 18),rgb(58, 58, 146));
+   background-image: linear-gradient(rgb(11, 11, 13),rgb(58, 58, 146));
    color:white;
+   border-radius: 30px 30px 0px 0px ;
    
 }
 
@@ -47,14 +50,13 @@
     /* background-color: red; */
 }
 
-.image-of-car{
-    width: 17vw;
-    height: 15vh;
+.image-of-car-in-rental-payment{
+  height: 150px;
+  margin-top: -50px;
 }
 
 .img{
-    width: 100%;
-    height: 100%;
+ height: 100%;
 }
 
 .midddle{
@@ -65,6 +67,7 @@
     color: black;
     height: 100%;
     background-color: rgb(58, 58, 146);
+    
     
    color:white;
 }
@@ -83,7 +86,9 @@
     height: 100%;
     padding: 15px;
     background-color: rgb(58, 58, 146);
-   
+    background-color: rgb(5, 5, 60);
+    background-image: linear-gradient(rgb(58, 58, 146),rgb(17, 17, 18));
+   border-radius: 0px 0px 30px 30px ;
    color:white;
 }
 
@@ -110,10 +115,11 @@
     height: 100%;
     padding: 30px;
     color: black;
-    border-radius: 15px;
+    border-radius: 30px;
     background-color: rgb(5, 5, 60);
     background-image: linear-gradient(rgb(17, 17, 18),rgb(58, 58, 146));
     color:white;
+    box-shadow: 3px 3px 10px black;
 }
 
 .order-details{
@@ -148,4 +154,28 @@
 
 .payment-button{
     width: 24vw;
+    background-color: rgb(65, 217, 65);
+    font-size: large;
+    font-weight: bold;
+    color: rgb(227, 233, 239);
+}
+.name-of-the-page-payment-of-the-car{
+    font-size:20px;
+    font-weight: bold;
+}
+.ans-of-the-file-payment-in-data-of-file{
+    font-size: large;
+    font-weight: bold;
+}
+.ans-of-the-file-payment-in-data-of-file-total{
+    font-size: large;
+    font-weight: bold;
+    color: rgb(145, 231, 145);
+}
+.cncl-brfd{
+    background-color: red;
+    font-size: large;
+    font-weight: bold;
+    color: aliceblue;
+    height: 40px;
 }
