--- a/ClientSide/src/Components/Style/editFormpaymentdetails.css
+++ b/ClientSide/src/Components/Style/editFormpaymentdetails.css
@@ -28,7 +28,7 @@ label,input,span{
     padding: 60px;
     margin-right: 0%;
 }
-input[type="checkbox"]{
+#input-type-checkboc-payment-detais{
     height: 15px;
     position: absolute;
     left: -30px;
@@ -108,4 +108,14 @@ label{
 }
 span{
     font-weight: bold;
+}
+#name-of-the-car-edit-payment{
+    font-size: 30px;
+    font-weight: bold;
+    margin-left: 32px;
+}
+#type-of-the-car-in-payment{
+    font-size: 25px;
+    font-weight: bold;
+    margin-left: 32px;
 }
