new update in my admin details

--- a/ClientSide/src/Components/Style/AdminPage.css
+++ b/ClientSide/src/Components/Style/AdminPage.css
@@ -92,3 +92,19 @@ hr{
     padding-bottom: 400px;
     
 }
+#display-message-on-the-admin-pag-for-the-err{
+    text-align: center;
+    border: 2px solid red;
+    width: 30%;
+    margin-left: 35%;
+    font-weight: bold;
+    border-radius: 5px;
+    color: red;
+}
+#button-ok-for-th-delee-things{
+    border: 2px solid red;
+    margin-left:20px;
+    background-color: red;
+    padding: 1px;
+    color: aliceblue;
+}
