--- a/ClientSide/src/Components/Style/cards.css
+++ b/ClientSide/src/Components/Style/cards.css
@@ -4,17 +4,16 @@
    height: 18rem;
    }
    #carCard{
+       padding-left: 100px;
+       padding-top: 40px;
        display: flex;
        width:90%;
        flex-wrap: wrap;
        width:100%;
-       justify-content: space-between;
-       gap:30px;
+       gap:50px;
        background-color:rgba(214, 214, 223, 0.995);
    }
-   
-
-   #cardBodys{
+#cardBodys{
        display: flex;
        flex-wrap: wrap;
       height: 100px;
@@ -88,5 +87,12 @@
    #book{
     margin-top: -25px;
        color: rgb(224, 231, 237);
+   }
+   .img-odf-the-car-image{
+    /* width: 100%; */
+    height: 10px;
+   }
+   #img-for-the-car-detail-order-page{
+height: 100%;
    }
    
