--- a/ClientSide/src/Components/Style/filter.css
+++ b/ClientSide/src/Components/Style/filter.css
@@ -32,7 +32,8 @@ padding-left: 45px;
 
 #car-type-filter-in-booking-page{
 background-color: rgb(236, 229, 229);
-/* position: absolute; */
+position: absolute;
+z-index: 1;
 height: auto;
 padding: 3px;
 margin-left: 20px;
