new styling for signin logn pages

--- a/ClientSide/src/Components/Style/Home.css
+++ b/ClientSide/src/Components/Style/Home.css
@@ -12,11 +12,11 @@
 }
 
 .slogan-of-the-home-page{
-    font-size: 25px;
+    font-size: 30px;
     margin-top: -20px;
     width: 60%;
     margin-left: -8px;
-    color: rgb(10, 10, 10);
+    color: white;
 }
 
 .Register{
