--- a/ClientSide/src/Components/Style/myBooking.css
+++ b/ClientSide/src/Components/Style/myBooking.css
@@ -60,3 +60,7 @@ height: 100%;
     font-size: large;
     font-weight: bold;
 }
+#name-of-the-booking-hading-page{
+    color: rgb(159, 157, 157);
+    margin-left: 10px;
+}
